# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.955 2010/10/31 14:41:48 mpagano Exp $

*git-sources-2.6.36-r17 (31 Oct 2010)

  31 Oct 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r17.ebuild:
  Version bump

*git-sources-2.6.36-r16 (31 Oct 2010)

  31 Oct 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r16.ebuild:
  Version bump

*git-sources-2.6.36-r15 (30 Oct 2010)

  30 Oct 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r15.ebuild:
  Version bump

*git-sources-2.6.36-r14 (30 Oct 2010)

  30 Oct 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r14.ebuild:
  Version bump

*git-sources-2.6.36-r13 (29 Oct 2010)

  29 Oct 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r13.ebuild:
  Version bump

*git-sources-2.6.36-r12 (29 Oct 2010)

  29 Oct 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r12.ebuild:
  Version bump

*git-sources-2.6.36-r11 (28 Oct 2010)

  28 Oct 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r11.ebuild:
  Version bump

*git-sources-2.6.36-r10 (27 Oct 2010)

  27 Oct 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r10.ebuild:
  Version bump

*git-sources-2.6.36-r9 (27 Oct 2010)

  27 Oct 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r9.ebuild:
  Version bump

*git-sources-2.6.36-r8 (26 Oct 2010)

  26 Oct 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.36-r8.ebuild:
  Version bump

*git-sources-2.6.36-r7 (26 Oct 2010)

  26 Oct 2010; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.36_rc8.ebuild, -git-sources-2.6.36_rc8-r1.ebuild,
  -git-sources-2.6.36_rc8-r2.ebuild, -git-sources-2.6.36_rc8-r3.ebuild,
  -git-sources-2.6.36_rc8-r4.ebuild, -git-sources-2.6.36_rc8-r5.ebuild,
  +git-sources-2.6.36-r7.ebuild:
  Version bump

*git-sources-2.6.36-r6 (25 Oct 2010)
