@@ -19,6 +19,7 @@ DIST patch-2.6.36-git6.bz2 5262865 RMD160 0f9bb48f900f83201c8436252ef0ca229d0cc5
 DIST patch-2.6.36-git7.bz2 6298460 RMD160 28297d0d24ace52d6721b6379093a24c0886eae5 SHA1 018c4f1b063897fef69f5f2a59f0b8317efc14df SHA256 3a4c1187a90f74466ad756a505939d2024abf510ac31fdec0b0ed86f17aac81f
 DIST patch-2.6.36-git8.bz2 6332381 RMD160 0f8b8416ffdab85773d09d78048481330c8e9b5e SHA1 f7d0c010943c928085c95f8df26789f236d3f496 SHA256 921055fba71fbf826e4d193396d01850bb113b7fdc9bd7474e43c3b7864d8f6f
 DIST patch-2.6.36-git9.bz2 6407347 RMD160 7309ab07a4f99434675129615710dd2726d1212d SHA1 c2dddf03cdd8b8b41365a3d1b3b0a29b1b8d0284 SHA256 3f578b9e2715b552f92303db5b6c8b8b85c5a9bc0e12d7711e1e1e8e59d6e612
+DIST patch-2.6.37-rc1.bz2 11871195 RMD160 2cb9d3fa8ef71b5dea035d712cd7bcb91937898e SHA1 6cc101edfe3ebfd8cef481ef7fbee8ae7a01d101 SHA256 bba4bae12682d1e7bfe337832bbc5488bcdc6726481ef36056543c9b8f106ba2
 EBUILD git-sources-2.6.36-r1.ebuild 1263 RMD160 456d9a597f890d201bfbbc2e55bab1bb7e6fec8e SHA1 8b975e0050955d98388d5712b6af8ba702c70bf4 SHA256 b1d870527b6e725de5edf8228efdedb709478712e178cd8bdeb906f7319f08bd
 EBUILD git-sources-2.6.36-r10.ebuild 1264 RMD160 229816a7f4ed2c1f9f3d01bab8264088e3389383 SHA1 1306e597dbc156fd521f55f56ab3de4535feb014 SHA256 8a15b2b41751512f8d5bfdb42391874090cd4e722f77cb65e53bdacf0f735507
 EBUILD git-sources-2.6.36-r11.ebuild 1264 RMD160 ab105c3e2a2ba3327f1650a1a165b43646e9c36d SHA1 9880dfa2cb446c50a674b8a3599d8a83fafb5e3b SHA256 e4fc6a0ce44d3c4e127cc164c3a68270af0a0ccf921b541f643ccc565e45ceaf
@@ -36,12 +37,13 @@ EBUILD git-sources-2.6.36-r6.ebuild 1263 RMD160 612d48ed7ca2cad5a2a54f9f53b0cef3
 EBUILD git-sources-2.6.36-r7.ebuild 1263 RMD160 4b13de933150044a1aac1dbd17208b5bd545531b SHA1 8f1bd902bda3be880e84f4333a01548c26f7fa58 SHA256 20507a82ce589cd53d536f9f5b8d0894b453ec9a8ab50684f442af88536f710b
 EBUILD git-sources-2.6.36-r8.ebuild 1263 RMD160 cb3c1dd4a8a71b20348393ef3a634c8db95a9196 SHA1 a5a38e231e3ef3d5de3b945e010fc0e25cf45698 SHA256 04840a86ee5ab9392d9ae07677e4fd82eb3c3fdbf9aa808013668cac54404472
 EBUILD git-sources-2.6.36-r9.ebuild 1263 RMD160 fda3f996ca89a2062622c2c14c51cf61eb14e361 SHA1 45e3cb4420e946494c24190cced88885092d671b SHA256 c1b8cc179dcdacb27223e705f09bdf520b8f389a3c3b037be4e68e017de2c4f8
-MISC ChangeLog 183265 RMD160 8ee09a5be8a706caa5c86e7aefb4afb1303c27c1 SHA1 04791d7c7334d32c0187152881e15de110a960d8 SHA256 8aa591f29a519d35fd213329571552876cfa7791827e257ca64efd296cc131c9
+EBUILD git-sources-2.6.37_rc1.ebuild 1264 RMD160 48ab5629cf105deb133cd9190d9b120d6e59369c SHA1 d4c7c6477fe54c1b9eb12c7f771ab78876582fc3 SHA256 de8fd1b8e4b11fd2e53b174779fec4af199af881b47cf222b5ac4f8632010f00
+MISC ChangeLog 183402 RMD160 b2e0c4cf3874c31cde1db899b824e34990858b04 SHA1 92ccf5d692ee376665175d9f11b528e3085764b4 SHA256 fb65f9f5b2fbdad9861a8a5c2141e491441b749c827be9d9061177bff727857e
 MISC metadata.xml 460 RMD160 a96aabd76f2d713116e9c2b131da3a5a2b09065f SHA1 c050d9450624357dfd0db2b82e16717da7cbca29 SHA256 1cb771bf1cf049ed4ecb8b27e0efd74c765fb016a024403abbfa8a956b842b92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzNgEAACgkQPDPGULV25OPC/gCgtg+mKO7cJ6XRZ+VBayKFUbYQ
-m2IAn0FyOxhRp4LMEiSsqTD09GgEq0SQ
-=vil5
+iEYEARECAAYFAkzOuoUACgkQPDPGULV25OO2CACfSz58tA1eo3Md8vy7lVJD6d7f
+wcUAn32Ybhjbzllt3/KWI0soEcul/eX/
+=gDkm
 -----END PGP SIGNATURE-----
