@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.955 2010/10/31 14:41:48 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.956 2010/11/01 13:02:54 mpagano Exp $
+
+*git-sources-2.6.37_rc1 (01 Nov 2010)
+
+  01 Nov 2010; Mike Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.37_rc1.ebuild:
+  Version bump
 
 *git-sources-2.6.36-r17 (31 Oct 2010)
 
